# manipulator-utils

./: .gitignore  .gitmodules  LICENSE  README.md  flake.nix
diagnostic_tool/: CMakeLists.txt  generate_joint_trajectories.py  record_hardware.py  record_sim.py  sim2real_diff_plotter.ipynb  sim2real_diff_plotter.py  wx250s_kinematics.py
diagnostic_tool/.ipynb_checkpoints/: sim2real_diff_plotter-checkpoint.ipynb
diagnostic_tool/data/: hw_trajectories.pkl  joint_trajectories.pkl
diagnostic_tool/example/triangle/: joint_trajectories.pkl  sim_trajectories.pkl
diagnostic_tool/kinematics_cpp/: kinematics.cpp  test_kinematics.py
nix/pkgs/DynamixelSDK/: default.nix
nix/pkgs/dynamixel-workbench/: default.nix
nix/pkgs/ros-diagnostics-devshell/: default.nix
